# xblock-utils2

./: .gitignore  CHANGELOG.md  README.rst  setup.cfg  setup.py
xblockutils/: studio_editable.py
xblockutils/templates/: studio_edit.html
xblockutils2/: studio_editable.py  studio_editable_test.py
xblockutils2/public/: studio_edit.js
xblockutils2/templates/: studio_edit.html
