;;
;; FUN package
;;
[metadata]
name = xblock-utils2
version = 0.3.0
description = Various utilities for XBlocks
long_description = file: README.rst
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/xblock-utils2
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.extras_require]
dev =
    wheel

[options.package_data]
xblockutils2 =
    public/*.js
    templates/*.html

[options.packages.find]
exclude =
    tests
    tests.*

[wheel]
universal = 1
